--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,12 +11,20 @@ android {
 
     defaultConfig {
         applicationId "com.gideondev.weatherapp"
-        minSdk 21
+        minSdk 23
         targetSdk 33
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+    }
+
+    buildFeatures {
+        compose true
+    }
+
+    composeOptions {
+        kotlinCompilerExtensionVersion "1.3.2"
     }
 
     buildTypes {
@@ -43,7 +51,13 @@ dependencies {
     implementation project(path: ':data')
     implementation project(path: ':domain')
     testImplementation project(path: ':testdata')
+
+    implementation 'androidx.activity:activity-compose:1.6.1'
+    // Compose Material Design
+    implementation 'androidx.compose.material:material:1.3.1'
+    implementation 'androidx.compose.ui:ui-tooling:1.3.3'
     implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
+    implementation 'io.coil-kt:coil-compose:2.2.2'
     implementation "com.google.dagger:hilt-android:2.44"
 
     kapt "com.google.dagger:hilt-compiler:2.44"
